...
    const val SWAP_FUNDS_HEADER = "swap funds"
    const val SWAP_FUNDS = "Swap funds"
    const val SWAP_DIRECTION = "I'd like to move my funds from..."
    const val SUBTITLE = "Move satoshis between your bitcoin wallet and your bitcoin lightning connection."
    const val MOVE = "Move"
    const val NEXT = "Next"
    const val DONE = "Done"
    const val ONCHAIN_TO_LIGHTNING = "Onchain to Lightning"
    const val LIGHTNING_TO_ONCHAIN = "Lightning to Onchain"
    const val SATS_AT_A_TIME = "Move up to <amount> sats."
    const val ENTER_AMOUNT_OF_SATOSHIS = "Enter amount of satoshis"
    const val AMOUNT_EXCEEDED = "You can only move up to <amount> satoshis at a time. Please enter an amount within this limit."
    const val FEES_MESSAGE = "The expected fee to move <b><amount> satoshis</b> (<convertedamount>) is <b><feesamount> satoshis</b> (<convertedfees>)."
...
    const val SWAP_QUESTION = "Swap status"

    const val STATUS_PREPARING = "Preparing"
    const val STATUS_AWAITING_CONFIRMATION = "Waiting to be mined"
    const val STATUS_AWAITING_PAYMENT = "Awaiting payment"
    const val STATUS_INVOICE_PENDING = "Awaiting swap payout"
    const val STATUS_COMPLETE = "Swap complete"
    const val STATUS_CLAIMING = "Claiming your bitcoin"
    const val STATUS_FAILED_TO_PAY = "Swap failed (couldn't pay invoice)"
    const val STATUS_EXPIRED = "Swap expired"
    const val STATUS_INCORRECT_AMOUNT = "Swap failed (incorrect amount)"
    const val STATUS_AWAITING_TRANSACTION = "Awaiting transaction"
    const val STATUS_INVOICE_EXPIRED = "Swap failed (invoice expired)"
...
